versioned_docs/version-3.0/start/getting-started.mdx
---
title: "Getting started"
hide_table_of_contents: true
sidebar_label: Getting Started
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Getting started
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


Welcome to this introductory article that will guide you through all the parts of RavenDB needed for basic understanding and simple setup.

## Starting server

For starters, you need to have a RavenDB server running. There are couple of ways you can acquire it:

- distribution package or installer can be downloaded from [ravendb.net](https://ravendb.net/download),
- [NuGet package](https://www.nuget.org/packages/RavenDB.Server/)

Now, we will focus on the distribution package (if you want to read about the installer go [here](../server/installation/using-installer.mdx)). The package contains the following directories:

- `Backup` - contains [Raven.Backup](../server/administration/backup-and-restore.mdx) utility for doing backups,
- `Bundles` - contains all non built-in [plugins](../server/plugins/what-are-plugins.mdx) e.g. [Authorization](../server/bundles/authorization.mdx) or [Encryption](../server/bundles/encryption.mdx),
- `Client` - contains all .NET client libraries needed for development,
- `Server` - contains all server files (including configuration files such as [Raven.Server.exe.config](../server/configuration/configuration-options.mdx))
- `Smuggler` - contains utility for [importing and exporting](../server/administration/exporting-and-importing-data.mdx) data between servers,
- `Web` - contains all files needed for [IIS deployment](../server/installation/iis.mdx)

In the package there is a file `Start.cmd` which will start a server as a console application (aka [debug mode](../server/troubleshooting/running-in-debug-mode.mdx)), which is great for development purposes or simply to try out various functionalities, but not for production release. When server has started, [the Studio](../studio/accessing-studio.mdx) will be available at `http://localhost:<port>/`. RavenDB is configured by default to use port 8080, or the next available, if this is one is occupied.

<Admonition type="info" title="Info">
If you want to install RavenDB as a service, please visit [this](../server/installation/as-a-service.mdx) article. There is also a possibility to install it on [IIS](../server/installation/iis.mdx) or run it as an [embedded](../server/installation/embedded.mdx) instance.
</Admonition>

---

## Client

In the `Client` directory (in the distribution package), all .NET client libraries can be found. After referencing them in your project, all classes are found under the `Raven.*` namespace, with the `DocumentStore` as the most interesting one. This is the main entry point for your application, which will establish and manage connection channel between your application and a server. We recommend reading the following articles:

- [What is a document store?](../client-api/what-is-a-document-store.mdx)
- [Creating a document store](../client-api/creating-document-store.mdx)
- [Setting up a default database](../client-api/setting-up-default-database.mdx)

<Admonition type="info" title="Info">
Worth knowing is that the `DocumentStore` is a heavyweight object and there should only be one instance of it per application (singleton).
</Admonition>

There are two ways to manipulate data using the store, first one (and the **recommended** one) is a [Session](../client-api/session/what-is-a-session-and-how-does-it-work.mdx), second one are [Commands](../client-api/commands/what-are-commands.mdx), which are a low-level way to manipulate data and should only be used when needed. Both the `Session` and the `Commands` contain asynchronous and synchronous methods.

Please read the following articles if you want to get more details:

- [What is a session and how does it work?](../client-api/session/what-is-a-session-and-how-does-it-work.mdx) and [Opening a session](../client-api/session/opening-a-session.mdx)
- [What are commands?](../client-api/commands/what-are-commands.mdx)

---

## Examples

Before we will proceed, we would like to point out that in most of the articles the `Northwind` database is being used. More details about it and information on how to deploy it can be found [here](../start/about-examples.mdx).

---

## Theory & few examples

RavenDB is a document database, which means that all stored objects are called `documents`. Each document contains a **key** that identifies it, **data**, and adjacent **metadata**, both stored in JSON format. The metadata contains various information describing the document, e.g. the modification date or the [collection](../client-api/faq/what-is-a-collection.mdx) assignment.

### Creating Document Store, Opening a Session, Storing and Loading entities

The example below will demonstrate how to create the `DocumentStore`, open a `Session`, store, and load few entities.

<TabItem value="start_1" label="start_1">
<CodeBlock language="csharp">
{`using (IDocumentStore store = new DocumentStore
\{
    Urls = new[] \{ "http://localhost:8080/" \}, // server URL
    Database = "Northwind"   // default database
\})
\{
    store.Initialize(); // initializes document store, by connecting to server and downloading various configurations

    using (IDocumentSession session = store.OpenSession()) // opens a session that will work in context of 'DefaultDatabase'
    \{
        Employee employee = new Employee
        \{
            FirstName = "John",
            LastName = "Doe"
        \};

        session.Store(employee); // stores employee in session, assigning it to a collection \`Employees\`
        string employeeId = employee.Id; // Session.Store will assign Id to employee, if it is not set

        session.SaveChanges(); // sends all changes to server

        // Session implements Unit of Work pattern,
        // therefore employee instance would be the same and no server call will be made
        Employee loadedEmployee = session.Load<Employee>(employeeId);
        Assert.Equal(employee, loadedEmployee);
    \}
\}
`}
</CodeBlock>
</TabItem>

### Querying

To satisfy queries, indexes must be used. In short, index is a server-side function that defines using which fields (and what values) document can be searched on. The whole indexation process is done asynchronously, which gives a very quick response times, even when large amounts of data have been changed, however implication of this approach is that the index might be [stale](../indexes/stale-indexes.mdx). Before you continue, we advise reading the following articles:

- [What are indexes?](../indexes/what-are-indexes.mdx)
- [Creating and deploying indexes](../indexes/creating-and-deploying.mdx)
- [Indexing basics](../indexes/indexing-basics.mdx)
- [Map indexes](../indexes/map-indexes.mdx)

This example assumes that your database contains the `Northwind` sample data. If you are not sure how to deploy it, please visit [this](../studio/overview/tasks/create-sample-data.mdx) article.

<TabItem value="start_2" label="start_2">
<CodeBlock language="csharp">
{`/// <summary>
/// All _ in index class names will be converted to /
/// it means that Employees_ByFirstNameAndLastName will be Employees/ByFirstNameAndLastName
/// when deployed to server
/// 
/// AbstractIndexCreationTask is a helper class that gives you strongly-typed syntax
/// for creating indexes
/// </summary>
public class Employees_ByFirstNameAndLastName : AbstractIndexCreationTask<Employee>
\{
    public Employees_ByFirstNameAndLastName()
    \{
        // this is a simple (Map) index LINQ-flavored mapping function
        // that enables searching of Employees by
        // FirstName, LastName (or both)
        Map = employees => from employee in employees
                           select new
                           \{
                               FirstName = employee.FirstName,
                               LastName = employee.LastName
                           \};
    \}
\}
`}
</CodeBlock>
</TabItem>

---

## Few words about the documentation

The documentation has been divided into few sections:

- in `Indexes` you can find all the theory about indexes and querying,
- `Transformers` contain information about server-side transformation functions that can shape your query results,
- in `Client API` you can find API reference with basic examples for most of the methods available in client. There is also a lot of theory on how things work on client side,
- `Server` contains information about administration, maintenance, configuration, installation, and troubleshooting of the server,
- `Studio` - go there if you want to check what can be done using the Studio

---

## Samples

The following sample applications are available:

- [MVC Starter Kit](../samples/mvc-starter-kit.mdx)

## Playground Server

Please visit [this](../start/playground-server.mdx) dedicated article if you are interested in this topic.
</LanguageContent>
<LanguageContent language="java">


## Stable releases

Simply put ravendb dependency to your pom:

<TabItem value="xml" label="xml">
<CodeBlock language="xml">
{`<dependency>
  <groupId>net.ravendb</groupId>
  <artifactId>ravendb-client</artifactId>
  <version>3.2.1</version>
</dependency>
`}
</CodeBlock>
</TabItem>


## Create new maven project

Sample pom:

<TabItem value="xml" label="xml">
<CodeBlock language="xml">
{`<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.example</groupId>
  <artifactId>ravendb-example</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <dependencies>
    <dependency>
      <groupId>net.ravendb</groupId>
      <artifactId>ravendb-client</artifactId>
      <version>3.2.0</version>
    </dependency>
  </dependencies>

  <build>
	  <plugins>
		<plugin>
		  <groupId>com.mysema.maven</groupId>
		  <artifactId>apt-maven-plugin</artifactId>
		  <version>1.1.1</version>
		  <executions>
			<execution>
			  <goals>
				<goal>process</goal>
			  </goals>
			  <configuration>
				<outputDirectory>target/generated-sources/java</outputDirectory>
				<processor>net.ravendb.querydsl.RavenDBAnnotationProcessor</processor>
				<options>
				  <querydsl.entityAccessors>true</querydsl.entityAccessors>
				</options>
			  </configuration>
			</execution>
		  </executions>
		</plugin>
	</plugins>
  </build>
</project>
`}
</CodeBlock>
</TabItem>

Please note that plugins section contains `net.ravendb.querydsl.RavenDBAnnotationProcessor`. 
As Java does not have LINQ, all definitions of indexes/transformers must be created using strings.
Alternatively, you can use the Studio to create indexes/transformers, yet you can also use QueryDSL for strongly-typed querying. In order to use QueryDSL you have to mark your entities with `@QueryEntity` 
annotation and enable code generation in `pom.xml`. 

<TabItem value="java" label="java">
<CodeBlock language="java">
{`@QueryEntity
public class Category \{
  private String id;
  private String name;
  private String description;
  public String getId() \{
    return id;
  \}
  public void setId(String id) \{
    this.id = id;
  \}
  public String getName() \{
    return name;
  \}
  public void setName(String name) \{
    this.name = name;
  \}
  public String getDescription() \{
    return description;
  \}
  public void setDescription(String description) \{
    this.description = description;
  \}
\}
`}
</CodeBlock>
</TabItem>

After doing this you can use strongly-typed syntax. 

<TabItem value="java" label="java">
<CodeBlock language="java">
{`QCategory c = QCategory.category;
   List<Category> candies = session
     .query(Category.class)
     .where(c.name.eq("Candy"))
     .toList();
`}
</CodeBlock>
</TabItem>


## Unstable releases

RavenDB Client Unstable is available as snapshot in daily-builds S3 maven repository.

<Admonition type="warning" title="Important" id="important" href="#important">
Embedding repositories in pom is not a good practice, although it allows a quick start. Please consider moving repositories into `~/.m2/settings.xml`.
More information can be found [here](http://maven.apache.org/guides/mini/guide-multiple-repositories.html). 
</Admonition>

<TabItem value="java" label="java">
<CodeBlock language="java">
{`<repositories>
  <repository>
      <id>snapshots-repo</id>
      <url>http://ravendb-maven.s3.amazonaws.com/snapshots/</url>
      <releases>
         <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
   </repository>
</repositories>
`}
</CodeBlock>
</TabItem>
</LanguageContent>

<!---

-->